fixes #2785 fixes #2783 fixes #2768 improves docs flow

--- a/src/docs/partials/examples/index.html
+++ b/src/docs/partials/examples/index.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <meta http-equiv="refresh" content="0; URL=https://getdatepicker.com/6/repl.html">
   <link rel="canonical" href="https://getdatepicker.com/6/repl.html">
 
@@ -2601,13 +2601,12 @@
 <!--    </script>-->
 <!--  </div>-->
 <!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">-->
-</page-body>
+</div>
 
-<page-meta>
-  <title>Examples</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/20/2022</update-date>
-  <excerpt>How to use Tempus Dominus datetime picker
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Examples</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/20/2022</div>
+  <div id="excerpt">How to use Tempus Dominus datetime picker</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
