--- a/src/docs/partials/examples/jquery.html
+++ b/src/docs/partials/examples/jquery.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'
           integrity='sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=='
           crossorigin='anonymous' referrerpolicy='no-referrer'></script>
@@ -128,13 +128,12 @@
       $('#datetimepicker1').tempusDominus();
     </script>
   </div>
-</page-body>
+</div>
 
-<page-meta>
-  <title>Examples using jQuery</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>02/05/2022</update-date>
-  <excerpt>How to use Tempus Dominus datetime picker with jquery
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Examples using jQuery</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">02/05/2022</div>
+  <div id="excerpt">How to use Tempus Dominus datetime picker with jquery</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
