--- a/src/docs/partials/functions.html
+++ b/src/docs/partials/functions.html
@@ -1,17 +1,16 @@
-<page-body>
+<div id="page-body">
     <meta http-equiv="refresh" content="0; URL=https://getdatepicker.com/6/functions">
     <link rel="canonical" href="https://getdatepicker.com/6/functions/">
 
     The functions have been split up and moved to a different page.
 
     Redirecting to <a href="https://getdatepicker.com/6/functions/">https://getdatepicker.com/6/functions</a>
-</page-body>
+</div>
 
-<page-meta>
-    <title>Functions</title>
-    <post-date>07/08/2021</post-date>
-    <update-date>07/08/2021</update-date>
-    <excerpt>How to use Tempus Dominus datetime picker
-    </excerpt>
-    <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+    <div id="title">Functions</div>
+    <div id="post-date">07/08/2021</div>
+    <div id="update-date">07/08/2021</div>
+    <div id="excerpt">How to use Tempus Dominus datetime picker</div>
+    <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
