--- a/src/docs/partials/functions/display.html
+++ b/src/docs/partials/functions/display.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     For the sake of the following documentation, assume there's a picker setup like this:
     <pre>
@@ -101,22 +101,19 @@
     <nav id='TableOfContents'>
       <ul>
         <li><a href='#content'>Overview</a></li>
-        <li><a href='#updateOptions'>Update Options</a></li>
-        <li><a href='#dispose'>Dispose</a></li>
-        <li><a href='#disable'>Disable</a></li>
-        <li><a href='#enable'>Enable</a></li>
-        <li><a href='#clear'>Clear</a></li>
-        <li><a href='#subscribe'>Subscribe</a></li>
+        <li><a href='#toggle'>Toggle</a></li>
+        <li><a href='#show'>Show</a></li>
+        <li><a href='#hide'>Hide</a></li>
+        <li><a href='#paint'>Paint</a></li>
       </ul>
     </nav>
   </div>
-</page-body>
+</div>
 
-<page-meta>
-  <title>Display Functions</title>
-  <post-date>08/14/2022</post-date>
-  <update-date>08/14/2022</update-date>
-  <excerpt>How to use Tempus Dominus datetime picker
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Display Functions</div>
+  <div id="post-date">08/14/2022</div>
+  <div id="update-date">08/14/2022</div>
+  <div id="excerpt">How to use Tempus Dominus datetime picker</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
