--- a/src/docs/partials/functions/index.html
+++ b/src/docs/partials/functions/index.html
@@ -1,8 +1,8 @@
-<page-body>
+<div id="page-body">
     <div class='row'>
         For the sake of the following documentation, assume there's a picker setup like this:
         <pre>
-<code class='language-javascript'>const picker = new tempusdominus
+<code class='language-javascript'>const picker = new tempusDominus
     .TempusDominus(document.getElementById('datetimepicker1'));</code>
 </pre>
 
@@ -137,13 +137,12 @@ const subscriptions = picker.subscribe(
             </ul>
         </nav>
     </div>
-</page-body>
+</div>
 
-<page-meta>
-    <title>Functions</title>
-    <post-date>08/14/2022</post-date>
-    <update-date>08/14/2022</update-date>
-    <excerpt>How to use Tempus Dominus datetime picker
-    </excerpt>
-    <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+    <div id="title">Functions</div>
+    <div id="post-date">08/14/2022</div>
+    <div id="update-date">08/14/2022</div>
+    <div id="excerpt">How to use Tempus Dominus datetime picker</div>
+    <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
