--- a/src/docs/partials/index.html
+++ b/src/docs/partials/index.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <p class="lead mb-4">
       Tempus Dominus is the successor to the very popular "eonasdan/bootstrap-datetimepicker". The plugin provides a wide array of options that allow developers to provide date and or time selections to users as simple pickers, date of birth selection, appointments and more.
@@ -16,12 +16,11 @@
       <li>Check out the <a href="https://github.com/Eonasdan/tempus-dominus/discussions" rel="noopener" target='_blank'>discussions</a></li>
     </ul>
   </div>
-</page-body>
-<page-meta>
-  <title>Introduction</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
-  <excerpt>Introduction to Eonasdan's date time picker.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+</div>
+<div id="page-meta">
+  <div id="title">Introduction</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/08/2021</div>
+  <div id="excerpt">Introduction to Eonasdan's date time picker.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
