--- a/src/docs/partials/locale.html
+++ b/src/docs/partials/locale.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <p>
       The locale files offer a simple way to globally or individually set the localization options without the need to
@@ -106,13 +106,12 @@ datetimepicker1.locale(name);</code>
       </ul>
     </nav>
   </div>
-</page-body>
+</div>
 
-<page-meta>
-  <title>Locales</title>
-  <post-date>01/19/2022</post-date>
-  <update-date>02/05/2022</update-date>
-  <excerpt>How to use plugins with Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Locales</div>
+  <div id="post-date">01/19/2022</div>
+  <div id="update-date">02/05/2022</div>
+  <div id="excerpt">How to use plugins with Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
