--- a/src/docs/partials/migration.html
+++ b/src/docs/partials/migration.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div id='migration'>
     <p>
       Version 6 defaults to FA 5 icons (but will switch to FA 6 when that's released), removes moment, jQuery and
@@ -115,12 +115,11 @@
       </p>
     </div>
   </div>
-</page-body>
-<page-meta>
-  <title>Migration</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
-  <excerpt>How to use Tempus Dominus datetime picker
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+</div>
+<div id="page-meta">
+  <div id="title">Migration</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/08/2021</div>
+  <div id="excerpt">How to use Tempus Dominus datetime picker</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
