--- a/src/docs/partials/namespace/errors.html
+++ b/src/docs/partials/namespace/errors.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <p>
     The date picker will throw errors for a number of different reason. Most errors are related to an invalid setup.
   </p>
@@ -153,12 +153,12 @@
     </nav>
   </div>
 
-</page-body>
+</div>
 
-<page-meta>
-  <title>Errors</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
-  <excerpt>Overview of the errors thrown and error messages from Tempius Dominus.</excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Errors</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/08/2021</div>
+  <div id="excerpt">Overview of the errors thrown and error messages from Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
