--- a/src/docs/partials/namespace/index.html
+++ b/src/docs/partials/namespace/index.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <p>
       Tempus Dominus uses and exposes a Namespace class for consistency and easy reference.
@@ -22,14 +22,12 @@
     <h2>errorMessages</h2>
     <p>A class with the pickers errors and error messages. <a href='errors.html'>See the full css page for more details.</a></p>
   </div>
-</page-body>
+</div>
 
-<page-meta>
-  <title>Namespace</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/20/2022</update-date>
-  <excerpt>
-    Overview of the Namespace for Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Namespace</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/20/2022</div>
+  <div id="excerpt">Overview of the Namespace for Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
