--- a/src/docs/partials/options.html
+++ b/src/docs/partials/options.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
     <meta http-equiv="refresh" content="0; URL=https://getdatepicker.com/6/options">
     <link rel="canonical" href="https://getdatepicker.com/6/options">
 
@@ -6,10 +6,10 @@
 
     Redirecting to <a href="https://getdatepicker.com/6/options">https://getdatepicker.com/6/options</a>
 
-</page-body>
+</div>
 
-<page-meta>
-    <title>Redirecting to Options</title>
-    <post-date>07/08/2021</post-date>
-    <update-date>08/13/2022</update-date>
-</page-meta>
+<div id="page-meta">
+    <div id="title">Redirecting to Options</div>
+    <div id="post-date">07/08/2021</div>
+    <div id="update-date">08/13/2022</div>
+</div>
