--- a/src/docs/partials/options/display.html
+++ b/src/docs/partials/options/display.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <p id='overview'>
     The display options allow you to control much of the picker's look and feel. You can disable components, buttons
     and change the default icons.
@@ -466,14 +466,12 @@
     </nav>
   </div>
 
-</page-body>
+</div>
 
-<page-meta>
-  <title>Display Options</title>
-  <post-date>08/11/2022</post-date>
-  <update-date>08/11/2022</update-date>
-  <excerpt>How to use the display options.
-  </excerpt>
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Display Options</div>
+  <div id="post-date">08/11/2022</div>
+  <div id="update-date">08/11/2022</div>
+  <div id="excerpt">How to use the display options.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
