--- a/src/docs/partials/plugins/customDateFormat.html
+++ b/src/docs/partials/plugins/customDateFormat.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <div class='alert alert-info'>
       <i class="fa-solid fa-exclamation"></i> This is no longer a plugin. It's now included directly.
@@ -25,7 +25,7 @@
         </div>
         <div class='col-6'>
           <div class='mb-3'>
-            <label for='format' class='form-label'>Locale</label>
+            <label for='locale' class='form-label'>Locale</label>
             <input type='text' class='form-control' id='locale' value='pt-BR' />
           </div>
         </div>
@@ -212,13 +212,12 @@ const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById(
       </table>
     </div>
   </div>
-</page-body>
+</div>
 
-<page-meta>
-  <title>Custom Date Formats</title>
-  <post-date>01/19/2022</post-date>
-  <update-date>01/26/2023</update-date>
-  <excerpt>How to use custom date format plugin with Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Custom Date Formats</div>
+  <div id="post-date">01/19/2022</div>
+  <div id="update-date">01/26/2023</div>
+  <div id="excerpt">How to use custom date format plugin with Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
