--- a/src/docs/partials/plugins/paint.html
+++ b/src/docs/partials/plugins/paint.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <p>
       You can customize the css classes applied to dates by overwriting the <code>display.paint</code>.
@@ -67,13 +67,12 @@ datetimepicker1.display.paint = (unit, date, classes, element) => {
 }</code>
     </pre>
   </div>
-</page-body>
+</div>
 
-<page-meta>
-  <title>Plugins - Paint</title>
-  <post-date>02/05/2022</post-date>
-  <update-date>03/21/2022</update-date>
-  <excerpt>How to use add custom classes with Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Plugins - Paint</div>
+  <div id="post-date">02/05/2022</div>
+  <div id="update-date">03/21/2022</div>
+  <div id="excerpt">How to use add custom classes with Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
