--- a/src/docs/partials/repl.html
+++ b/src/docs/partials/repl.html
@@ -1,9 +1,8 @@
-<page-body>
+<div id="page-body">
   <div id='embed'></div>
   <script src='https://unpkg.com/@stackblitz/sdk/bundles/sdk.umd.js'></script>
   <script src='https://cdn.jsdelivr.net/npm/@eonasdan/lz-string@1.0.3/dist/lz-string.min.js'
           integrity='sha256-mu6oqL9lqHnCZ7uliJ0+a0z2VcMuzS7JgqZqV1jheTM=' crossorigin='anonymous'></script>
-  </script>
   <script src='https://unpkg.com/prettier@2.7.1/standalone.js'></script>
   <script src='https://unpkg.com/prettier@2.7.1/parser-babel.js'></script>
   <script src='https://unpkg.com/prettier@2.7.1/parser-html.js'></script>
@@ -241,13 +240,12 @@
     </li>
   </div>
 
-</page-body>
+</div>
 
-<page-meta>
-  <title>REPL</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
-  <excerpt>How to use Tempus Dominus datetime picker
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">REPL</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/08/2021</div>
+  <div id="excerpt">How to use Tempus Dominus datetime picker</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
