--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -136,7 +136,7 @@
         <span class='d-none d-lg-inline'>Tempus Dominus</span> v6.0
       </button>
       <ul class='dropdown-menu dropdown-menu-end' aria-labelledby='bd-versions'>
-        <li><a class='dropdown-item current' aria-current='true' href='/docs/6/'>Latest (6.0.x)</a></li>
+        <li><a class='dropdown-item current' aria-current='true' href='/6/'>Latest (6.4.4)</a></li>
         <li>
           <hr class='dropdown-divider'>
         </li>
