--- a/src/docs/partials/change-log-archive.html
+++ b/src/docs/partials/change-log-archive.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <h2>Beta9</h2>
     <h3>Bug Fixes</h3>
@@ -419,12 +419,11 @@
     </p>
   </div>
 
-</page-body>
-<page-meta>
-  <title>Change Log Archive</title>
-  <post-date>07/20/2021</post-date>
-  <update-date>07/20/2021</update-date>
-  <excerpt>An archive of changes between different version of tempus dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+</div>
+<div id="page-meta">
+  <div id="title">Change Log Archive</div>
+  <div id="post-date">07/20/2021</div>
+  <div id="update-date">07/20/2021</div>
+  <div id="excerpt">An archive of changes between different version of tempus dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
