--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div id='change-log'>
     <h1>Version 6</h1>
 
@@ -152,12 +152,11 @@
       </p>
     </div>
   </div>
-</page-body>
-<page-meta>
-  <title>Change Log</title>
-  <post-date>07/20/2021</post-date>
-  <update-date>07/20/2021</update-date>
-  <excerpt>An overview of changes between different version of tempus dominus
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+</div>
+<div id="page-meta">
+  <div id="title">Change Log</div>
+  <div id="post-date">07/20/2021</div>
+  <div id="update-date">07/20/2021</div>
+  <div id="excerpt">An overview of changes between different version of tempus dominus</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
