--- a/src/docs/partials/datetime.html
+++ b/src/docs/partials/datetime.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <p>
     In v6 I dropped moment as a required library since it is no longer recommended. Almost all the functions in the
     picker make use of my custom DateTime class which extends the native Date object.
@@ -7,13 +7,12 @@
     Because I am simply extending the native date object, any returned values will still behave like a date object.
     Which means you don't need to adopt using DateTime in your project unless you want to. Once less library to worry about!
   </p>
-</page-body>
+</div>
 
-<page-meta>
-  <title>DateTime</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
-  <excerpt>Custom date extension object
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">DateTime</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/08/2021</div>
+  <div id="excerpt">Custom date extension object</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
