--- a/src/docs/partials/installing.html
+++ b/src/docs/partials/installing.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <p>
       No matter how you choose to get the files, make sure that Popper is include before the picker's main script file.
@@ -58,11 +58,11 @@ Install-Package TempusDominus.scss</code>
     </nav>
   </div>
 
-</page-body>
-<page-meta>
-  <title>Download</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
-  <excerpt>How to install Tempus Dominus datetime picker.</excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+</div>
+<div id="page-meta">
+  <div id="title">Download</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/08/2021</div>
+  <div id="excerpt">How to install Tempus Dominus datetime picker.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
