--- a/src/docs/partials/namespace/css.html
+++ b/src/docs/partials/namespace/css.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <p>
     The picker uses the following css classes to style the picker.
   </p>
@@ -393,14 +393,12 @@
     </nav>
   </div>
 
-</page-body>
+</div>
 
-<page-meta>
-  <title>CSS Classes</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
-  <excerpt>
-    A break down of the CSS classes in Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">CSS Classes</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/08/2021</div>
+  <div id="excerpt">A break down of the CSS classes in Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
