--- a/src/docs/partials/namespace/events.html
+++ b/src/docs/partials/namespace/events.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <p>
       These events may provide additional details. For native javascript you can
@@ -75,12 +75,12 @@ interface HideEvent extends BaseEvent {
     </code>
   </pre>
   </div>
-</page-body>
+</div>
 
-<page-meta>
-  <title>Events</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
-  <excerpt>Overview of the events fired from Tempius Dominus Datetime picker.</excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Events</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/08/2021</div>
+  <div id="excerpt">Overview of the events fired from Tempus Dominus Datetime picker.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
