--- a/src/docs/partials/namespace/unit.html
+++ b/src/docs/partials/namespace/unit.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <p>
     The picker uses the following enum to represent a breakdown of date/time.
   </p>
@@ -13,14 +13,12 @@
     </ul>
   </div>
 
-</page-body>
+</div>
 
-<page-meta>
-  <title>Unit Enum</title>
-  <post-date>02/05/2022</post-date>
-  <update-date>02/05/2022</update-date>
-  <excerpt>
-    A break down of the Unit enum in Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Unit Enum</div>
+  <div id="post-date">02/05/2022</div>
+  <div id="update-date">02/05/2022</div>
+  <div id="excerpt">A break down of the Unit enum in Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
