--- a/src/docs/partials/options/index.html
+++ b/src/docs/partials/options/index.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <p id='overview'>
     Options can be provided during the initial setup through the constructor <code>new
     tempusDominus.TempusDominus(..., options);</code>. Take a look at the examples for more information.
@@ -302,13 +302,12 @@
     </nav>
   </div>
 
-</page-body>
+</div>
 
-<page-meta>
-  <title>Options</title>
-  <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
-  <excerpt>How to use Tempus Dominus datetime picker
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Options</div>
+  <div id="post-date">07/08/2021</div>
+  <div id="update-date">07/08/2021</div>
+  <div id="excerpt">How to use Tempus Dominus datetime picker</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
