--- a/src/docs/partials/options/localization.html
+++ b/src/docs/partials/options/localization.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row' id='overview'>
     <div class='col'>
       <p>
@@ -527,13 +527,12 @@
     </nav>
   </div>
 
-</page-body>
+</div>
 
-<page-meta>
-  <title>Localization Options</title>
-  <post-date>08/11/2022</post-date>
-  <update-date>08/11/2022</update-date>
-  <excerpt>How to use the restriction options.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Localization Options</div>
+  <div id="post-date">08/11/2022</div>
+  <div id="update-date">08/11/2022</div>
+  <div id="excerpt">How to use the restriction options.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
