--- a/src/docs/partials/options/restrictions.html
+++ b/src/docs/partials/options/restrictions.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <p id='overview'>
     Restrictions allow you to prevent users from selected dates or times based on a set of rules.
   </p>
@@ -172,13 +172,12 @@ new tempusDominus.TempusDominus(..., {
     </nav>
   </div>
 
-</page-body>
+</div>
 
-<page-meta>
-  <title>Restrictions Options</title>
-  <post-date>08/11/2022</post-date>
-  <update-date>08/11/2022</update-date>
-  <excerpt>How to use the restriction options.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Restrictions Options</div>
+  <div id="post-date">08/11/2022</div>
+  <div id="update-date">08/11/2022</div>
+  <div id="excerpt">How to use the restriction options.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
