--- a/src/docs/partials/plugins/bi1.html
+++ b/src/docs/partials/plugins/bi1.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <p>
       You can use this plugin to set the global default icons to Bootstrap Icons v1. This plugin requires Bootstrap Icons v1 resources to be loaded.
@@ -121,13 +121,12 @@ datetimepicker1.updateOptions({ display: icons: biOneIcons});</code>
   </div>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-</page-body>
+</div>
 
-<page-meta>
-  <title>Plugins - Bootstrap Icons v1</title>
-  <post-date>03/15/2023</post-date>
-  <update-date>03/15/2023</update-date>
-  <excerpt>How to use Bootstrap Icons v1 plugin with Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Plugins - Bootstrap Icons v1</div>
+  <div id="post-date">03/15/2023</div>
+  <div id="update-date">03/15/2023</div>
+  <div id="excerpt">How to use Bootstrap Icons v1 plugin with Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
