--- a/src/docs/partials/plugins/fa5.html
+++ b/src/docs/partials/plugins/fa5.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <p>
       You can use this plugin to set the global default icons to FA5. This plugin requires the FA5 resources to be
@@ -127,13 +127,12 @@ datetimepicker1.updateOptions({ display: icons: faFiveIcons});</code>
   <script defer src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/fontawesome.min.js'
           integrity='sha512-KCwrxBJebca0PPOaHELfqGtqkUlFUCuqCnmtydvBSTnJrBirJ55hRG5xcP4R9Rdx9Fz9IF3Yw6Rx40uhuAHR8Q=='
           crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-</page-body>
+</div>
 
-<page-meta>
-  <title>Plugins - Font Awesome 5</title>
-  <post-date>01/19/2022</post-date>
-  <update-date>07/22/2022</update-date>
-  <excerpt>How to use font awesome 5 plugin with Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Plugins - Font Awesome 5</div>
+  <div id="post-date">01/19/2022</div>
+  <div id="update-date">07/22/2022</div>
+  <div id="excerpt">How to use font awesome 5 plugin with Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
