--- a/src/docs/partials/plugins/floating-ui.html
+++ b/src/docs/partials/plugins/floating-ui.html
@@ -1,9 +1,11 @@
-<page-body>
+<div id='page-body'>
   <div class='row'>
     <h3>Floating UI</h3>
     <p>
-      By default, @popperJS/core is required for the popper to work correctly. Alternatively, we can remove popper and use
-      <a href='https://github.com/floating-ui/floating-ui' target='_blank' rel='noopener'>FloatingUI</a> by creating a plugin that handles the popup creation.
+      By default, @popperJS/core is required for the popper to work correctly. Alternatively, we can remove popper and
+      use
+      <a href='https://github.com/floating-ui/floating-ui' target='_blank' rel='noopener'>FloatingUI</a> by creating a
+      plugin that handles the popup creation.
     </p>
   </div>
 
@@ -24,21 +26,12 @@ datetimepicker1.display.createPopup = computePosition(element, widget, options).
 </code>
     </pre>
   </div>
+</div>
 
-
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/solid.min.js'
-          integrity='sha512-Qc+cBMt/4/KXJ1F6nNQahXIsgPygHM4S2XWChoumV8qkpZ9oO+gBDBEpOxgbkQQ/6DlHx6cUxa5nBhEbuiR8xw=='
-          crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-  <script defer src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/fontawesome.min.js'
-          integrity='sha512-KCwrxBJebca0PPOaHELfqGtqkUlFUCuqCnmtydvBSTnJrBirJ55hRG5xcP4R9Rdx9Fz9IF3Yw6Rx40uhuAHR8Q=='
-          crossorigin='anonymous' referrerpolicy='no-referrer'></script>
-</page-body>
-
-<page-meta>
-  <title>Plugins - FloatingUI</title>
-  <post-date>09/13/2022</post-date>
-  <update-date>09/13/2022</update-date>
-  <excerpt>How to use FloatingUI plugin with Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id='page-meta'>
+  <div id='title'>Plugins - FloatingUI</div>
+  <div id='post-date'>09/13/2022</div>
+  <div id='update-date'>09/13/2022</div>
+  <div id='excerpt'>How to use FloatingUI plugin with Tempus Dominus.</div>
+  <div id='tags'>datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
