--- a/src/docs/partials/plugins/index.html
+++ b/src/docs/partials/plugins/index.html
@@ -1,4 +1,4 @@
-<page-body>
+<div id="page-body">
   <div class='row'>
     <h3>Introduction</h3>
     <p>
@@ -105,13 +105,12 @@ td.dates.formatInput = function(date) { {return moment(date).format('MM/DD/YYYY'
     </nav>
   </div>
 
-</page-body>
+</div>
 
-<page-meta>
-  <title>Plugins</title>
-  <post-date>01/19/2022</post-date>
-  <update-date>02/05/2022</update-date>
-  <excerpt>How to use plugins with Tempus Dominus.
-  </excerpt>
-  <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
-</page-meta>
+<div id="page-meta">
+  <div id="title">Plugins</div>
+  <div id="post-date">01/19/2022</div>
+  <div id="update-date">02/05/2022</div>
+  <div id="excerpt">How to use plugins with Tempus Dominus.</div>
+  <div id="tags">datepicker, javascript, open source, tempus dominus, eonasdan</div>
+</div>
