fix repl cdn links

--- a/src/docs/partials/repl.html
+++ b/src/docs/partials/repl.html
@@ -1,11 +1,12 @@
 <div id="page-body">
   <div id='embed'></div>
-  <script src='https://unpkg.com/@stackblitz/sdk/bundles/sdk.umd.js'></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/@stackblitz/sdk@1.9.0/bundles/sdk.umd.js" integrity="sha256-YRwJRKMWZ1RpAGrke6zzS2ZZmPFGqsB6o9eTNpeF9KA=" crossorigin="anonymous"></script>
   <script src='https://cdn.jsdelivr.net/npm/@eonasdan/lz-string@1.0.3/dist/lz-string.min.js'
           integrity='sha256-mu6oqL9lqHnCZ7uliJ0+a0z2VcMuzS7JgqZqV1jheTM=' crossorigin='anonymous'></script>
-  <script src='https://unpkg.com/prettier@2.8.7/standalone.js'></script>
-  <script src='https://unpkg.com/prettier@2.8.7/parser-babel.js'></script>
-  <script src='https://unpkg.com/prettier@2.8.7/parser-html.js'></script>
+  <script src="https://cdn.jsdelivr.net/npm/prettier@2.8.7/standalone.js" integrity="sha256-0szozow+nJCuZKS0rL5ZOayUJ8/uoo57QZTyOdH8SBk=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prettier@2.8.7/parser-babel.js" integrity="sha256-a5LgZia05/mWM+e3hPjD1uZP4K4ZkR1hvAOZbv1QWrE=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prettier@2.8.7/parser-html.js" integrity="sha256-T1puTit6YYp6go4c5z9FHvY8k3EeKQYyI7glBZ2qprI=" crossorigin="anonymous"></script>
   <script defer>
     /* global prettier, lzString, StackBlitzSDK, prettierPlugins */
 
