--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,24 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.7.7</h2>
+      <h3>New</h3>
+      <ul>
+        <li>Lots more test coverage #2791</li>
+        <li>Placement option #2789</li>
+        <li>Exported default en-US locale #2687</li>
+        <li>When <code>userCurrent</code> is false the clock will now display <code>--</code> instead. #2764</li>
+      </ul>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed some issues with the date range #2788, #2798</li>
+        <li>Fixed calendarWeeks bug #2786</li>
+        <li>Fixed REPL issues #2795 #2784</li>
+        <li>Fixed multiple dates option not showing "active" state #2796</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.4.4</h2>
       <h3>Bug fixes</h3>
       <ul>
