#2810 fix doc example #2815 migrate sonarcloud

--- a/src/docs/partials/plugins/customDateFormat.html
+++ b/src/docs/partials/plugins/customDateFormat.html
@@ -87,12 +87,12 @@
 
   <div class='row'>
     <pre>
-<code class='language-js'>
-//example picker
-const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById(&#39;datetimepicker1&#39;),
+<code class='language-js'>//example picker
+const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById('datetimepicker'), {
   localization: {
-  locale: 'pt-BR',
-  format: 'dd/MM/yyyy HH:mm',
+    locale: 'pt-BR',
+    format: 'dd/MM/yyyy HH:mm',
+  }
 });
 </code>
     </pre>
