--- a/src/docs/partials/repl.html
+++ b/src/docs/partials/repl.html
@@ -242,6 +242,9 @@
         <li><a href='javascript:updateRepl("functions")'
                class='d-inline-flex align-items-center rounded' aria-current='page'>Functions</a></li>
 
+        <li><a href='javascript:updateRepl("plugins")'
+               class='d-inline-flex align-items-center rounded' aria-current='page'>Plugins</a></li>
+
 <!--        <li><a href='javascript:updateRepl("")'-->
 <!--               class='d-inline-flex align-items-center rounded' aria-current='page'></a></li>-->
       </ul>
