--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,20 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.7.10</h2>
+      <h3>New</h3>
+      <ul>
+        <li>Lots more test coverage #2791</li>
+      </ul>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Hopefully fixed update options bounce. #2621</li>
+        <li>Fixed input toggle #2575</li>
+        <li>Fixed docs #2810</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.7.7</h2>
       <h3>New</h3>
       <ul>
