--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -2,6 +2,15 @@
   <div id='change-log'>
     <h1>Version 6</h1>
 
+
+    <div class='row'>
+      <h2>6.7.11</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Hotfix for #2837</li>
+      </ul>
+    </div>
+
     <div class='row'>
       <h2>6.7.10</h2>
       <h3>New</h3>
