--- a/src/docs/partials/migration.html
+++ b/src/docs/partials/migration.html
@@ -11,7 +11,7 @@
       be converted.
     </p>
     <p>
-      For more information on what's changed, check out the <a href='change-log.html'>change log</a>.
+      For more information on what's changed, check out the <a href='change-log-v6.html'>change log</a>.
     </p>
     <p>
       If you find a bug or your configuration doesn't work, please open an issue.
