--- a/src/docs/partials/options/index.html
+++ b/src/docs/partials/options/index.html
@@ -59,8 +59,7 @@
       clock: true,
       hours: true,
       minutes: true,
-      seconds: false,
-      useTwentyfourHour: undefined
+      seconds: false
     },
     inline: false,
     theme: 'auto'
