--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -2,7 +2,7 @@
   <div class='bd-masthead mb-3' id='content'>
     <div class='container-xxl bd-gutter'>
       <div class='col-md-8 mx-auto text-center'>
-        <h1 class='mb-3 fw-semibold'>Powerful and robust date and time picker</h1>
+        <h1 class='mb-3 fw-semibold'>Powerful and robust date and time picker.</h1>
         <p class='lead mb-4'>
           Tempus Dominus is the successor to the very popular "eonasdan/bootstrap-datetimepicker". The plugin provides
           a wide array of options that allow developers to provide date and or time selections to users as simple
@@ -10,16 +10,16 @@
         </p>
         <div class='d-flex flex-column flex-lg-row align-items-md-stretch justify-content-md-center gap-3 mb-4'>
           <div class='d-flex flex-column flex-md-row'>
-            <a href='/6/' class='btn btn-lg btn-primary mb-3 me-md-3'
+            <a href='/7/' class='btn btn-lg btn-primary mb-3 me-md-3'
                onclick="ga('send', 'event', 'Jumbotron actions', 'Get started', 'Get started');">Get started</a>
-            <a href='/6/installing.html' class='btn btn-lg btn-outline-secondary mb-3'
-               onclick="ga('send', 'event', 'Jumbotron actions', 'Download', 'Download 6');">Download</a>
+            <a href='/7/installing.html' class='btn btn-lg btn-outline-secondary mb-3'
+               onclick="ga('send', 'event', 'Jumbotron actions', 'Download', 'Download 7');">Download</a>
           </div>
         </div>
         <p class='text-muted mb-0'>
-          Currently <strong>v6.7.11</strong>
+          Currently <strong>v7.0.0</strong>
           <span class='px-1'>&middot;</span>
-          <a href='https://getdatepicker.com/5-4/' class='link-secondary'>v5 docs</a>
+          <a href='https://getdatepicker.com/6/' class='link-secondary'>v6 docs</a>
         </p>
         <script async type='text/javascript'
                 src='//cdn.carbonads.com/carbon.js?serve=CK7DC5QN&placement=getdatepickercom'
@@ -55,10 +55,10 @@
 <code class='language-html'>&lt;!-- Popperjs --&gt;
 &lt;script src=&quot;https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js&quot; integrity=&quot;sha256-BRqBN7dYgABqtY9Hd4ynE+1slnEw+roEPFzQ7TRRfcg=&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
 &lt;!-- Tempus Dominus JavaScript --&gt;
-&lt;script src=&quot;https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.7.11/dist/js/tempus-dominus.min.js&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
+&lt;script src=&quot;https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@7.0.0/dist/js/tempus-dominus.min.js&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
 
 &lt;!-- Tempus Dominus Styles --&gt;
-&lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.7.11/dist/css/tempus-dominus.min.css&quot; crossorigin=&quot;anonymous&quot;&gt;</code>
+&lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@7.0.0/dist/css/tempus-dominus.min.css&quot; crossorigin=&quot;anonymous&quot;&gt;</code>
 </pre>
       </div>
     </div>
