--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,6 @@
 <div id='page-body'>
   <div id='change-log'>
-    <h1>Version 6</h1>
+    <h1>Version 7</h1>
 
     <div class='row'>
       <h2>7.0.0</h2>
@@ -12,6 +12,13 @@
       <ul>
         <li></li>
       </ul>
+    </div>
+
+    <div class='row'>
+      <h2>Older History</h2>
+      <p>
+        For older history, please see the <a href='change-log-v6.html'>archived change log</a>.
+      </p>
     </div>
   </div>
 </div>
