--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,15 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.7.13</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Selecting any date element now updates the selected date. #2811</li>
+        <li>Hotfix for #2846</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.7.11</h2>
       <h3>Bug fixes</h3>
       <ul>
