Fix: setting minDate as future day or maxDate as previous day

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,14 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.7.14</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fix bug with setting minDate as future day or maxDate as previous day.</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.7.13</h2>
       <h3>Bug fixes</h3>
       <ul>
