Reverted #2811 Fixed #2850 Fixed #2855

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,16 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.7.16</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Reverted #2811</li>
+        <li>Fixed #2850</li>
+        <li>Fixed #2855</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.7.13</h2>
       <h3>Bug fixes</h3>
       <ul>
