--- a/src/docs/partials/options/localization.html
+++ b/src/docs/partials/options/localization.html
@@ -348,6 +348,17 @@
   </div>
 
   <div class='row'>
+    <h2 id='maxWeekdayLength'>maxWeekdayLength<a class='anchor-link' aria-label='Anchor'
+                                             href='#maxWeekdayLength'><i
+      class='fa-solid fa-anchor' aria-hidden='true'></i></a>
+    </h2>
+    <p>
+      <strong>Accepts:</strong> number <strong>Defaults:</strong> 0<br />
+      If provided the weekday string will be truncated to this length. This is useful when the Intl values are too long.
+    </p>
+  </div>
+
+  <div class='row'>
     <h2 id='hourCycle'>hourCycle<a class='anchor-link' aria-label='Anchor'
                                    href='#hourCycle'><i
       class='fa-solid fa-anchor' aria-hidden='true'></i></a>
@@ -511,6 +522,7 @@
         <li><a href='#dayViewHeaderFormat'>Day View Header Format</a></li>
         <li><a href='#locale'>Locale</a></li>
         <li><a href='#startOfTheWeek'>Start Of The Week</a></li>
+        <li><a href='#maxWeekdayLength'>Max Weekday Length</a></li>
         <li><a href='#dateFormats'>Date Formats</a>
           <ul>
             <li><a href='#dateFormatsLTS'>LTS</a></li>
