--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -3,6 +3,20 @@
     <h1>Version 6</h1>
 
     <div class='row'>
+      <h2>6.7.19</h2>
+      <h3>New</h3>
+      <ul>
+        <li>Added <code>maxWeekdayLength</code>. This option will truncate the day of the week header.</li>
+      </ul>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed #2871</li>
+        <li>Fixed #2860</li>
+        <li>Fixed #2817</li>
+      </ul>
+    </div>
+
+    <div class='row'>
       <h2>6.7.16</h2>
       <h3>Bug fixes</h3>
       <ul>
